croatia-components-main@ce2ceb27993/unleash-be/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: unleash-be
  name: unleash-be
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
