croatia-components-main@ce2ceb27993/unleash-be/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: unleash-be
  namespace: unleash-be
spec:
  host: unleash-be.apps.dev-nonpci-shared.npnbank.local
  to:
    kind: Service
    name: unleash-be
    weight: 100
  port:
    targetPort: 4242
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
